deploy-bookmedik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmedik
  labels:
    app: bookmedik
    type: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookmedik
      type: frontend
  template:
    metadata:
      labels:
        app: bookmedik
        type: frontend
    spec:
      containers:
        - name: bookmedik
          image: megandil/bookmedik:v1_3
          ports:
            - containerPort: 80
              name: http-port
