bookmedik-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmedik-service
  labels:
    app: bookmedik
    type: frontend
spec:
  selector:
    app: bookmedik
    type: frontend
  type: NodePort
  ports:
  - port: 80
    targetPort: http-port
