mariadb-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  labels:
    app: bookmedik
    type: database
spec:
  selector:
    app: bookmedik
    type: database
  ports:
  - port: 3306
    targetPort: db-port
  type: ClusterIP
